# subtitle-creator

./: .gitignore  README.md  main.py  pyproject.toml
specs/: mission.md  roadmap.md  tech-stack.md
