[project]
name = "subtitle-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-speech>=2.37.0",
    "google-cloud-storage>=3.10.0",
    "google-cloud-translate>=3.24.0",
    "moviepy>=2.2.1",
    "rich>=15.0.0",
    "tqdm>=4.66.0",
    "typer>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
